--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "bootstrap": "~3.0.3",
     "angular-resource": "1.2.15",
     "angular-route": "1.2.15",
-    "angular-bootstrap": "~0.10.0"
+    "angular-bootstrap": "~0.10.0",
+    "angular-scroll":"0.5.6"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
