--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "grunt-usemin": "~2.0.0",
     "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "~0.4.0",
-    "time-grunt": "~0.2.1"
+    "time-grunt": "~0.2.1",
+    "bower": "~1.4.1",
+    "grunt-bower-requirejs": "~2.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
