--- a/bower.json
+++ b/bower.json
@@ -10,8 +10,9 @@
     "angular-resource": "1.2.15",
     "angular-route": "1.2.15",
     "angular-bootstrap": "~0.10.0",
-    "angular-scroll":"0.5.6",
-    "wow": "1.1.2"
+    "angular-scroll": "0.5.6",
+    "wow": "1.1.2",
+    "animate-css": "~3.3.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
